Close the DB instance